Adding pollstar defaults

--- a/src/src/app/pages/home/home-page/home-page.component.html
+++ b/src/src/app/pages/home/home-page/home-page.component.html
@@ -8,6 +8,7 @@
           mat-flat-button
           color="primary"
           translate="button.create-session"
+          (click)="createSession()"
         ></button>
         <button
           mat-flat-button
