Add docker build

--- a/src/src/app/template/session-template/session-page-template/session-page-template.component.html
+++ b/src/src/app/template/session-template/session-page-template/session-page-template.component.html
@@ -27,6 +27,7 @@
 
 <mat-sidenav-container class="example-sidenav-container">
   <mat-sidenav #snav fixedTopGap="56" mode="side" [opened]="drawerOpened">
+    <app-polls-list></app-polls-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
