--- a/src/src/app/pages/home/home-page/home-page.component.html
+++ b/src/src/app/pages/home/home-page/home-page.component.html
@@ -14,6 +14,7 @@
           mat-flat-button
           color="primary"
           translate="button.join-session"
+          (click)="joinSession()"
         ></button>
       </div>
     </div>
