--- a/src/src/app/pages/view/view-session-page/view-session-page.component.html
+++ b/src/src/app/pages/view/view-session-page/view-session-page.component.html
@@ -2,6 +2,16 @@
   {{ activeSession.name }}
   <span *ngIf="activePoll">&nbsp;&gt;&nbsp;{{ activePoll.name }} </span>
 </mat-toolbar>
+<div *ngIf="chartOptions">
+  <apx-chart
+    #chart
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [labels]="chartOptions.labels"
+    [responsive]="chartOptions.responsive"
+  ></apx-chart>
+</div>
+<button mat-flat-button (click)="changeSeries()">Change</button>
 <div class="empty-state" *ngIf="activeSession && !activePoll">
   <mat-card>
     <mat-card-title translate="session.view.empty-state.title"></mat-card-title>
