--- a/src/src/app/shared/components/polls-list/polls-list.component.html
+++ b/src/src/app/shared/components/polls-list/polls-list.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="isLoading"></app-loading>
 <div class="polls-list" *ngIf="sessionPolls">
   <div class="poll-list-item empty-state" *ngIf="sessionPolls.length === 0">
     <span translate="session.manage.polls.empty-state"></span>
